mainline->tcb merge as of 2005-02-16.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-cleanup-branch@95170 138bc75d-0d04-0410-961f-82ee72b054a4